--- a/03-post-process/output-plots-children/10-rho-params.Rmd
+++ b/03-post-process/output-plots-children/10-rho-params.Rmd
@@ -16,7 +16,7 @@ rho_params = rho_params1[!(rho_params1 %in% rho_params2)]
 
 f = function(p) {
   x = rowMeans(post_subset(post, paste0("^", p, "["), matrix = TRUE))
-  c(mean = mean(x), sd = sd(x), quantile(x, c(0.1, 0.25, 0.5, 0.75, 0.9)))
+  c(mean = mean(x), sd = sd(x), quantile(x, c(0.025, 0.1, 0.25, 0.5, 0.75, 0.9, 0.975)))
 }
 rho_mean_out = t(sapply(rho_params, f))
 rho_mean_out = rho_mean_out[order(rho_mean_out[,"mean"]),]
@@ -43,17 +43,17 @@ All processes assumed covariance among population pairs except "LGR to Ocean" an
 
 Notation:
 
-* Blue: Mean correlation of all population pairs ("+" = posterior mean, thick lines = 50% CRI, thin lines = 80% CRI)
-* Red: Correlation of individual population pairs ("+" = posterior mean, lines = 50% CRI)
-* Grey: Prior distribution (95%, 80%, and 50% CRIs in increasing darkness)
+* Main: Mean correlation of all population pairs ("+" = posterior mean, thick lines = 50% CRI, thin lines = 95% CRI)
+* Dots: Posterior mean correlation of individual population pairs
+<!-- * Grey: Prior distribution (95%, 80%, and 50% CRIs in increasing darkness) -->
 
-```{r rho-mean-plot, fig.width = 5, fig.height = 5}
+```{r rho-mean-plot, fig.width = 5, fig.height = 5, out.width = "50%"}
 # plot to show summary of correlation parameters across processes
 # mean across pairs shown as blue
 # individual population pairs shown as red
 
 # set up empty plotting region
-par(mar = c(2,8,1,1), cex.axis = 0.8, lend = "square", tcl = -0.15, mgp = c(2,0.35,0), yaxs = "i", lend = "square", ljoin ="mitre")
+mypar(mar = c(2,8,1,1), yaxs = "i", mfrow = c(1,1), oma = c(0,0,0,0), mgp = c(2,0.25,0))
 mp = barplot(rho_mean_out[,"mean"], 
              horiz = TRUE, xlim = c(-1,1),
              names.arg = rho_labels[rownames(rho_mean_out)],
@@ -81,22 +81,21 @@ pop_rhos = function(param, at_mp) {
   if (!(param %in% c("rho_Lphi_Ma_O0", "rho_Lphi_Rb_Ra"))) {
     x = post_summ(post, paste0(param, vcov_inds), probs = c(0.1, 0.25, 0.75, 0.9))
     y = at_mp + runif(6, -0.4, 0.4)
-    points(y ~ x["mean",], col = "royalblue", pch = 3, lwd = 1.5)
-    # segments(x["25%",], y, x["75%",], y, col = scales::alpha("royalblue", 0.5))
+    points(y ~ x["mean",], pch = 21, col = main_cols["model"], bg = tran_cols["model"])
   } 
 }
 
-junk = sapply(1:nrow(mp), function(i) draw_rho_prior(rownames(rho_mean_out)[i], box_lwr[i,], box_upr[i,]))
+# junk = sapply(1:nrow(mp), function(i) draw_rho_prior(rownames(rho_mean_out)[i], box_lwr[i,], box_upr[i,]))
+segments(rho_mean_out[,"25%"], mp, rho_mean_out[,"75%"], mp, lwd = 6, col = main_cols["model"])
+segments(rho_mean_out[,"2.5%"], mp, rho_mean_out[,"97.5%"], mp, col = main_cols["model"])
+points(mp ~ rho_mean_out[,"mean"], pch = 3, cex = 1, col = main_cols["model"], lwd = 3)
 junk = sapply(1:nrow(mp), function(i) pop_rhos(rownames(rho_mean_out)[i], mp[i,]))
-segments(rho_mean_out[,"25%"], mp, rho_mean_out[,"75%"], mp, lwd = 6, col = scales::alpha("royalblue", 0.55))
-segments(rho_mean_out[,"10%"], mp, rho_mean_out[,"90%"], mp, col = scales::alpha("royalblue", 0.55))
-points(mp ~ rho_mean_out[,"mean"], pch = 3, cex = 1, col = "royalblue", lwd = 3)
 
-abline(h = mp + rbind(diff(mp)/2, NA), xpd = FALSE, col = "grey50", lty = 2)
+abline(h = mp + rbind(diff(mp)/2, NA), xpd = FALSE, col = par("col.axis"), lty = 2)
+abline(v = 0, lty = 2, col = par("col.axis"))
 par(tcl = -7)
-axis(side = 2, at = mp + rbind(diff(mp)/2, NA), col = "grey50", line = NA, labels = FALSE, lty = 2)
-box()
-
+axis(side = 2, at = mp + rbind(diff(mp)/2, NA), col = par("col.axis"), line = NA, labels = FALSE, lty = 2)
+box(col = par("col.axis"))
 ```
 
 ## Process-Specific Summaries {.tabset .tabset-dropdown}
@@ -105,7 +104,7 @@ box()
 
 # one correlagram: for one summary statistic
 rho_mat_plot = function(param, q = "mean", main) {
-  rho_ests = post_summ(post, param, probs = c(0.1, 0.9))
+  rho_ests = post_summ(post, param, probs = c(0.025, 0.975))
   rho_mat = array_format(rho_ests[q,])
   rownames(rho_mat) = colnames(rho_mat) = pops
   col = colorRampPalette(c("salmon", "white", "royalblue"))(20)
@@ -117,9 +116,9 @@ rho_mat_plot = function(param, q = "mean", main) {
 rho_mat_plots = function(param, is_prior = FALSE) {
   par(mfrow = c(1,3), mar = c(1,1,1,1), cex = 1)
   dist = ifelse(is_prior, "Prior", "Posterior")
-  rho_mat_plot(param = param, q = "10%", main = paste0(dist, " 10%"))
+  rho_mat_plot(param = param, q = "2.5%", main = paste0(dist, " 2.5%"))
   rho_mat_plot(param = param, q = "mean", main = paste0(dist, " Mean"))
-  rho_mat_plot(param = param, q = "90%", main = paste0(dist, " 90%"))
+  rho_mat_plot(param = param, q = "97.5%", main = paste0(dist, " 97.5%"))
 }
 
 rho_mat_fig_h = 4
